...
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/imageView"-->
<!--        app:layout_constraintVertical_bias="0.0"-->
<!--        tools:ignore="MissingConstraints" />-->

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.944"
        android:onClick="submit"
        />

    <EditText
        android:id="@+id/etLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Location"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
...
